--- a/resume.html
+++ b/resume.html
@@ -50,7 +50,7 @@
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
                         <div class="page-heading">
-                            <img src="../Images/professional.jpg" alt="Ainoama Maiava" class="circular-photo">
+                            <img src="assets/img/professional.jpg" alt="Ainoama Maiava" class="circular-photo">
                             <h1 class="center-text">Ainoama Maiava</h1>
                             <span class="subheading">Marketing Management</span>
                         </div>
